Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
       </nav>
       <section>
         <h3>
-<a id="part-1---mpi-sorting-50" class="anchor" href="#part-1---mpi-sorting-50" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Part 1 - MPI Sorting (50%)</h3>
+<a id="part-1---rpc-rmi-etc-50" class="anchor" href="#part-1---rpc-rmi-etc-50" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Part 1 - RPC, RMI, etc (50%)</h3>
 
 <ul>
-<li>Implementing your sorting routine from the previous take home exam using standard MPI libraries in the language of your choice</li>
-<li>Must have communication between 3 or more virtual machines</li>
+<li>Implementing your sorting routine from the previous take home exam using remote procedure calls, remote method invocations, etc. e.g., Java RMI. If you wonder whether your proposed solution fits, e-mail me.</li>
+<li>Must have communication between three or more virtual machines</li>
 <li>Solution must be able to run on your Ubuntu server virtual machine</li>
 </ul>
 
@@ -52,8 +52,8 @@
 <a id="part-2---message-queue-50" class="anchor" href="#part-2---message-queue-50" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Part 2 - Message Queue (50%)</h3>
 
 <ul>
-<li>Implementing your sorting routine from the previous take home exam using message queue libraries in the language of your choice</li>
-<li>Must have communication between 3 or more virtual machines</li>
+<li>Implementing your sorting routine from the previous take home exam using message queue libraries in the language of your choice. e.g., ActiveMQ, OpenMQ, etc. If you wonder whether your proposed solution fits, e-mail me.</li>
+<li>Must have communication between three or more virtual machines</li>
 <li>Solution must be able to run on your Ubuntu server virtual machine</li>
 </ul>
       </section>
